# scope

./: .editorconfig  .env.example  .gitignore  Cargo.toml  README.md  bun.lockb  flake.nix  package.json  rustfmt.toml  shell.nix  svelte.config.js  tailwind.config.js
.docker/: spacebar_server.Dockerfile
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/workflows/: build.yml  check.yml
.scripts/: linux.sh  macOS.sh  windows.bat
assets/opensource-licenses/: twemoji-assets
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/cache/: Cargo.toml
src/cache/src/: channel.rs  lib.rs
src/cache/src/async_list/: mod.rs  refcache.rs  refcacheslice.rs  tests.rs
src/chat/: Cargo.toml
src/chat/src/: async_list.rs  channel.rs  client.rs  lib.rs  message.rs  reaction.rs
src/components/: windows_titlebar.svelte
src/discord/: Cargo.toml
src/discord/src/: client.rs  lib.rs  snowflake.rs
src/discord/src/channel/: metadata.rs  mod.rs
src/discord/src/message/: author.rs  content.rs  mod.rs  reaction.rs  reaction_list.rs
src/icons/: arrow_left_into_bar_icon.svelte  arrow_right_into_bar_icon.svelte
src/lib/: rem_size.svelte.ts  theme.ts
src/lib/platform/: index.svelte.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/login/: +page.svelte
src/ui/: Cargo.toml
src/ui/src/: _main.rs  actions.rs  app.rs  app_state.rs  assets.rs  main.rs  menu.rs
src/ui/src/channel/: message.rs  message_list.rs  mod.rs
src/ui/src/component/async_list/: element.rs  marker.rs  mod.rs
src/ui/src/oobe/: input.rs  login.rs  mod.rs  titlebar.rs
src/ui/src/settings/: mod.rs
src/ui/src/sidebar/: mod.rs
src/ui/src/sidebar/channel_tree/: channel_entry.rs  mod.rs
src/ui/src/surfaces/: README.md  app.rs  mod.rs  welcome.rs
src/util/: Cargo.toml
src/util/src/: lib.rs
