[package]
name = "scope-backend-cache"
version = "0.1.0"
edition = "2021"

[dependencies]
gpui = { git = "https://github.com/huacnlee/zed.git", branch = "export-platform-window", default-features = false, features = [
  "http_client",
  "font-kit",
] }
scope-chat = { version = "0.1.0", path = "../chat" }
tokio = "1.41.1"
