[package]
name = "scope-backend-discord"
version = "0.1.0"
edition = "2021"

[dependencies]
gpui.workspace = true
scope-chat = { version = "0.1.0", path = "../chat" }
serenity = { git = "https://github.com/scopeclient/serenity", version = "0.12" }
tokio = "1.41.1"
chrono.workspace = true
scope-backend-cache = { version = "0.1.0", path = "../cache" }
