[package]
name = "scope"
version = "0.1.0"
edition = "2021"
authors = [
  "Rose Kodsi-Hall <rose@hall.ly>",
  # Add yourself here if you contribute!
]
description = "discord client for power users"
readme = "README.md"
homepage = "https://www.scopeclient.com/"
repository = "https://github.com/scopeclient/scope"
keywords = ["discord", "scope", "reticle"]
license = "AGPL-3.0-or-later"

[dependencies]
gpui.workspace = true
reqwest_client.workspace = true
scope-chat = { version = "0.1.0", path = "../chat" }
scope-util = { version = "0.1.0", path = "../util" }
scope-backend-discord = { version = "0.1.0", path = "../discord" }
scope-backend-cache = { version = "0.1.0", path = "../cache" }
dotenv = "0.15.0"
env_logger = "0.11.5"
tokio = { version = "1.41.1", features = ["full"] }
components.workspace = true
log = "0.4.22"
random-string = "1.1.0"
rust-embed = "8.5.0"
chrono.workspace = true
catty = "0.1.5"

[features]
default = ["gpui/x11"]
wayland = ["gpui/wayland"]
